--- a/public/css/style.css
+++ b/public/css/style.css
@@ -56,6 +56,10 @@ body{width:100%; height: 100%;}
     padding:0;
 }
 
+#menu #clear {
+    display: none;
+}
+
 /* ESTILOS DE BOTONES E INPUTS */
 #menu button, #menu input, #menu #add, #menu p{
     width:100%;
@@ -66,12 +70,16 @@ body{width:100%; height: 100%;}
     text-align:center;
     border: none;
     outline: none;
-    padding:.5rem 1rem;
-    border-radius: .2rem;
+    padding:1rem;
+    border-radius: .6rem;
 }
 
 #menu button{
     cursor: pointer;
+}
+
+#menu button i{
+    padding:1rem;
 }
 
 #menu #newGame, #menu #add{
@@ -79,6 +87,14 @@ body{width:100%; height: 100%;}
     color:white;
     text-transform: uppercase;
 }
+
+#menu #newGame:hover,
+#menu #newGame:focus,
+#menu #add:hover,
+#menu #add:focus{
+    background: linear-gradient(135deg, var(--alura-dark) 0%, var(--alura) 30%, rgb(12, 17, 72) 100%);
+}
+
 
 #menu #word{
     text-transform: uppercase;
@@ -91,7 +107,7 @@ body{width:100%; height: 100%;}
 
 #menu #word:hover,
 #menu #word:focus{
-    border-color: var(--alura)
+    border-color: var(--alura);
 }
 
 #menu #menuError{
