--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,7 +20,7 @@
 #main{grid-area: main}
 #footer{grid-area: footer}
 
-body{width:100%; height: 100%;}
+body{width:100%; height: 100%; background-color: var(--fondo) ;}
 #max{
     max-width: 1000px;
     margin: 0 auto;
@@ -98,7 +98,8 @@ body{width:100%; height: 100%;}
 
 #menu #word{
     text-transform: uppercase;
-    border-bottom: 2px solid var(--fondo);
+    border-bottom: 1px solid var(--alura);
+    background-color: white;
 }
 
 #menu #word::placeholder{
